--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <%= link_to 'Home', static_pages_home_path %>
+    <%= link_to 'Help', static_pages_help_path %>
+    <%= link_to 'About', static_pages_about_path %>
+    <%= link_to 'Contact', static_pages_contact_path %>
     <%= yield %>
   </body>
 </html>
